# flash

./: .gitignore  CMakeLists.txt  README.md
docs/: design.md
examples/: CMakeLists.txt  mnist.cpp
flash/: README.md  __init__.py
flash-python/: README.md  setup.py
flash-python/examples/: mnist.py  resnet.py  transformer.py
flash-python/flash/: __init__.py
flash-python/flash/_C/: module.cpp
flash-python/flash/nn/: __init__.py  activation.py  batchnorm.py  conv.py  functional.py  linear.py  modules.py
flash-python/flash/optim/: __init__.py  adam.py  optimizer.py  sgd.py
flash-python/tests/: conftest.py  run_distributed_tests.py  test_distributed.py  test_nn.py  test_optim.py  test_resnet.py  test_transformer.py
flash/autodiff/: __init__.py  grad_fn.py
flash/core/: __init__.py  operations.py  tensor.py
flash/data/: __init__.py  dataloader.py  dataset.py
flash/examples/: cnn_example.py  mlp_example.py  rnn_example.py  transformer_example.py
flash/nn/: __init__.py
flash/nn/activations/: __init__.py  activation.py
flash/nn/layers/: __init__.py  attention.py  conv2d.py  linear.py  recurrent.py
flash/nn/losses/: __init__.py  loss.py
flash/nn/models/: __init__.py  cnn.py  mlp.py  rnn_model.py  transformer.py
flash/tests/: test_nn.py  test_tensor.py
flash/utils/: __init__.py  initializers.py  trainer.py
include/custom_kernels/: convolution.cuh  elementwise.cuh  matrix.cuh  reduction.cuh
include/framework/: autograd.h  device.h  init.h  module.h  optimizer.h  tensor.h
include/nn/: activation.h  batchnorm.h
kernels/: CMakeLists.txt
kernels/single_gpu/: elementwise.cu  matmul.cu  matrix.cu  reduction.cu
src/: CMakeLists.txt  autograd.cpp  module.cpp  nn.py  nn2.py  optimizer.cpp  tensor.cpp
(+2 files in other folders)
